[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/Machine.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/pinball/Pinball.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/HUDController.gd" type="Script" id=3]
[ext_resource path="res://scripts/UIController.gd" type="Script" id=4]
[ext_resource path="res://scripts/GimbalKeyControl.gd" type="Script" id=5]
[ext_resource path="res://scripts/VictoryScreenController.gd" type="Script" id=6]
[ext_resource path="res://scripts/StartScreenController.gd" type="Script" id=7]
[ext_resource path="res://scripts/ModulateRainbow.gd" type="Script" id=8]
[ext_resource path="res://scripts/InstructionInformator.gd" type="Script" id=9]

[sub_resource type="GDScript" id=1]
script/source = "extends Viewport

func _ready():
	
	self.world = get_parent().get_viewport().world
"

[sub_resource type="ProceduralSky" id=2]
sky_top_color = Color( 0.133333, 0.133333, 0.133333, 1 )
sky_horizon_color = Color( 0.811765, 0.788235, 0.596078, 1 )
sky_curve = 0.0998612

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )
ambient_light_color = Color( 1, 0.619608, 0, 1 )
ambient_light_energy = 0.8
fog_color = Color( 0.501961, 0.6, 0.701961, 1 )
fog_depth_begin = 0.5
fog_depth_end = 5.0
ssao_enabled = true
ssao_intensity = 1.2
glow_enabled = true

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Theme" id=9]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 1, 0.984314, 0, 1 )
Button/colors/font_color_pressed = Color( 0.705882, 0.694118, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 4 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 7 )
Button/styles/pressed = SubResource( 8 )

[node name="Game" type="Node"]

[node name="World" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="World"]
transform = Transform( -1, 5.67232e-08, -1.19689e-07, -4.61112e-08, 0.698028, 0.716071, 1.24164e-07, 0.716071, -0.698028, -2.45928e-08, 3.52972, -1.17875 )
current = true
fov = 53.4375

[node name="Machine" parent="World" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1, 1.54792 )
script = ExtResource( 5 )

[node name="Control" type="Control" parent="World/Machine"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -448.0
margin_top = -390.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="World/Machine/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.0352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="World/Machine/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -448.0
margin_top = -298.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="World/Machine/Control/ViewportContainer"]
size = Vector2( 1000, 1000 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 0
gui_disable_input = true
script = SubResource( 1 )

[node name="Camera2" type="Camera" parent="World/Machine/Control/ViewportContainer/Viewport"]
transform = Transform( -1, 1.77636e-15, -8.74228e-08, -8.60946e-08, 0.173648, 0.984808, 1.51808e-08, 0.984808, -0.173648, 1.46418e-15, 2.79186, 1.30955 )
projection = 1
current = true
size = 4.90673

[node name="PinballSpawn" type="Position3D" parent="World/Machine"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07397, 0.107296, 1.4115 )

[node name="InstructionInformatorPositions" type="Spatial" parent="World/Machine"]

[node name="PaddleLeft" type="Position3D" parent="World/Machine/InstructionInformatorPositions"]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0.0467107, 0.300101, -1.4041 )

[node name="PaddleRight" type="Position3D" parent="World/Machine/InstructionInformatorPositions"]
transform = Transform( 1, 0, 0, 0, 0.999999, -5.96046e-08, 0, 5.96046e-08, 0.999999, -0.611494, 0.300101, -1.4041 )

[node name="TiltUp" type="Position3D" parent="World/Machine/InstructionInformatorPositions"]
transform = Transform( 1, 0, 0, 0, 0.999997, -1.49012e-08, 0, 1.49012e-08, 0.999997, 0.04567, 0.346816, 0.468694 )

[node name="TiltLeft" type="Position3D" parent="World/Machine/InstructionInformatorPositions"]
transform = Transform( 1, 0, 0, 0, 0.999997, -1.49012e-08, 0, 1.49012e-08, 0.999997, 0.307909, 0.346816, 0.177894 )

[node name="TiltRight" type="Position3D" parent="World/Machine/InstructionInformatorPositions"]
transform = Transform( 1, 0, 0, 0, 0.999997, -1.49012e-08, 0, 1.49012e-08, 0.999997, -0.248747, 0.346816, 0.177894 )

[node name="TiltDown" type="Position3D" parent="World/Machine/InstructionInformatorPositions"]
transform = Transform( 1, 0, 0, 0, 0.999997, -1.49012e-08, 0, 1.49012e-08, 0.999997, 0.04567, 0.346816, -0.13427 )

[node name="Launch" type="Position3D" parent="World/Machine/InstructionInformatorPositions"]
transform = Transform( 1, 0, 0, 0, 0.999998, -1.49012e-08, 0, 1.49012e-08, 0.999998, -0.762465, 0.300101, 1.64457 )

[node name="Pinball" parent="World" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.38066, 1.5515, 2.9719 )
can_sleep = false

[node name="Timer" parent="World/Pinball" index="2"]
pinball_spawn_p = NodePath("../../Machine/PinballSpawn")

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="World"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2.68589, 0, 0 )
light_energy = 0.4
light_indirect_energy = 1.5
light_specular = 0.66
shadow_color = Color( 0.827451, 0.827451, 0.827451, 1 )
shadow_contact = 0.7
directional_shadow_mode = 1
directional_shadow_normal_bias = 1.02
directional_shadow_bias_split_scale = 0.05

[node name="SpotLight" type="SpotLight" parent="World"]
transform = Transform( 0.954136, -1.42177e-08, 0.299374, -0.235158, 0.618861, 0.749474, -0.185271, -0.785501, 0.590477, 1.75041, 4.3164, 3.79869 )
light_color = Color( 1, 0.992157, 0.72549, 1 )
light_energy = 4.33
shadow_enabled = true
shadow_color = Color( 0.776471, 0.776471, 0.776471, 1 )
shadow_bias = 0.01
spot_range = 5.9
spot_attenuation = 0.757861
spot_angle = 28.5

[node name="SpotLight2" type="SpotLight" parent="World"]
transform = Transform( 0.923338, 2.75176e-08, -0.383989, 0.301624, 0.618861, 0.725282, 0.237636, -0.785501, 0.571417, -2.17616, 4.3164, 3.79869 )
light_color = Color( 1, 0.992157, 0.72549, 1 )
light_energy = 4.33
shadow_enabled = true
shadow_color = Color( 0.776471, 0.776471, 0.776471, 1 )
shadow_bias = 0.01
spot_range = 5.9
spot_attenuation = 0.757861
spot_angle = 28.5

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
score_label_p = NodePath("MarginContainer/Control/ScoreLabel")
lives_label_p = NodePath("MarginContainer/Control/LivesLabel")

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HUD/MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 576.0

[node name="LivesLabel" type="Label" parent="HUD/MarginContainer/Control"]
margin_right = 199.0
margin_bottom = 178.0
rect_scale = Vector2( 2, 2 )
text = "Lives: <3 <3 <3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD/MarginContainer/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -661.0
margin_bottom = 522.0
rect_pivot_offset = Vector2( 236, 0 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Instructions"]
margin_left = 576.0
margin_top = 418.545
margin_right = 610.0
margin_bottom = 446.545
text = "[A]"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
input_key = "paddle_left"
spatial_to_follow_p = NodePath("../../../World/Machine/InstructionInformatorPositions/PaddleLeft")

[node name="Label2" type="Label" parent="HUD/Instructions"]
margin_left = 780.851
margin_top = 418.545
margin_right = 814.851
margin_bottom = 446.545
text = "[D]"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
input_key = "paddle_right"
spatial_to_follow_p = NodePath("../../../World/Machine/InstructionInformatorPositions/PaddleRight")

[node name="Label3" type="Label" parent="HUD/Instructions"]
margin_left = 793.547
margin_top = 168.1
margin_right = 848.547
margin_bottom = 196.1
text = "[ SPACE ]"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
input_key = "launch"
hold_time = 1.0
spatial_to_follow_p = NodePath("../../../World/Machine/InstructionInformatorPositions/Launch")

[node name="Label4" type="Label" parent="HUD/Instructions"]
margin_left = 526.88
margin_top = 210.766
margin_right = 581.88
margin_bottom = 238.766
text = "[ I ]"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
input_key = "tilt_up"
spatial_to_follow_p = NodePath("../../../World/Machine/InstructionInformatorPositions/TiltUp")

[node name="Label5" type="Label" parent="HUD/Instructions"]
margin_left = 526.88
margin_top = 249.433
margin_right = 581.88
margin_bottom = 277.433
text = "[ K ]"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
input_key = "tilt_down"
spatial_to_follow_p = NodePath("../../../World/Machine/InstructionInformatorPositions/TiltDown")

[node name="Label6" type="Label" parent="HUD/Instructions"]
margin_left = 459.547
margin_top = 227.433
margin_right = 514.547
margin_bottom = 255.433
text = "[ J ]"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
input_key = "tilt_left"
spatial_to_follow_p = NodePath("../../../World/Machine/InstructionInformatorPositions/TiltLeft")

[node name="Label7" type="Label" parent="HUD/Instructions"]
margin_left = 592.88
margin_top = 227.433
margin_right = 647.88
margin_bottom = 255.433
text = "[ L ]"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
input_key = "tilt_right"
spatial_to_follow_p = NodePath("../../../World/Machine/InstructionInformatorPositions/TiltRight")

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 9 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modal" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.054902, 0.054902, 0.733333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" type="VBoxContainer" parent="UI/StartScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -300.0
margin_right = 137.0
margin_bottom = 31.0
custom_constants/separation = 32
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="UI/StartScreen/StartScreen"]
margin_top = 224.0
margin_right = 273.0
margin_bottom = 239.0
bbcode_enabled = true
bbcode_text = "[center]Gyrgaball"
text = "Gyrgaball"
fit_content_height = true
script = ExtResource( 8 )

[node name="Button" type="Button" parent="UI/StartScreen/StartScreen"]
margin_top = 271.0
margin_right = 273.0
margin_bottom = 285.0
text = "[ play ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="UI/StartScreen/StartScreen"]
margin_top = 317.0
margin_right = 273.0
margin_bottom = 331.0
text = "[ exit ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiscoresLabel" type="RichTextLabel" parent="UI/StartScreen"]
self_modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = 73.0
margin_right = 94.0
margin_bottom = 190.0
rect_pivot_offset = Vector2( 94, 0 )
bbcode_enabled = true
bbcode_text = "[center]HISCORES
10
5
1"
text = "HISCORES
10
5
1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryScreen" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerLabel" type="RichTextLabel" parent="UI/VictoryScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -163.0
margin_right = -81.0
margin_bottom = -135.0
rect_scale = Vector2( 3, 3 )
bbcode_enabled = true
bbcode_text = "[color=yellow][center]You are a winner !"
text = "You are a winner !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="RichTextLabel" parent="UI/VictoryScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -97.0
margin_right = 216.0
margin_bottom = 31.0
bbcode_enabled = true
bbcode_text = "[center]Final score: 0"
text = "Final score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI/VictoryScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -7.0
margin_right = 177.0
margin_bottom = 7.0
text = "[ nice ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseScreen" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerLabel" type="RichTextLabel" parent="UI/LoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -163.0
margin_right = -81.0
margin_bottom = -135.0
rect_scale = Vector2( 3, 3 )
bbcode_enabled = true
bbcode_text = "[color=red][center]YOU DIED"
text = "YOU DIED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="RichTextLabel" parent="UI/LoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -97.0
margin_right = 216.0
margin_bottom = 31.0
bbcode_enabled = true
bbcode_text = "[center]score is no more"
text = "score is no more"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI/LoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -7.0
margin_right = 177.0
margin_bottom = 7.0
text = "[ oh ]"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/StartScreen/StartScreen/Button" to="UI" method="play"]
[connection signal="pressed" from="UI/StartScreen/StartScreen/Button4" to="UI" method="quit"]
[connection signal="pressed" from="UI/VictoryScreen/Button" to="UI" method="restart"]
[connection signal="pressed" from="UI/LoseScreen/Button" to="UI" method="restart"]

[editable path="World/Pinball"]
